@@ -6,6 +6,7 @@ Copyright (C) 2005 Joakim Erdfelt     <joakim a.t erdfelt d.o.t net>
 Copyright (C) 2005 Jeremy Thomerson   <jthomerson a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Erik Dick          <erdick a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Grzegorz Lukasik   <hauserx a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2005 Oliver Parent      <olivier-parent a.t users d.o.t sourceforge d.o.t net>
 
 Cobertura is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published
